
Package: R.utils
================

Version: 1.16.3 [2012-09-21]
o Now insert() silently expands 'values' to be of the same length 
  as 'ats', iff length(values) == 1.
o toCamelCase(..., preserveSameCase=TRUE) makes all-upper-case
  words into same-case words, e.g. toCamelCase("HTML View",
  preserveSameCase=TRUE) outputs "htmlView" (not "hTMLView").


Version: 1.16.2 [2012-09-12]
o ROBUSTNESS/CRAN POLICY: moveInSearchPath() no longer calls
  .Internal(detach(...)) but instead base::detach() in such a
  way that neither detach hooks nor .Last.lib() are called. 


Version: 1.16.1 [2012-09-07]
o Now createLink() also supports targets with '~' in the path.
o ROBUSTNESS: createLink(target="C:/") would try to create a link with
  name "C:", which is not valid resulting is the somewhat confusing
  error on "cannot symlink 'S:' to 'S:', reason 'Access is denied'".
  Now it instead throws "Cannot infer a valid link name from argument
  'target': C:/".
o ROBUSTNESS/BUG FIX: On Windows, it could happen that createLink() 
  would generate a zero-size link file that did not link to the target
  as a result of a failed file.symlink().  This is now tested for such
  that if an invalid link file was created, it is removed again.


Version: 1.16.0 [2012-07-11]
o CLEANUP: Dropped the graphics device related functions that
  were moved to R.devices.
o System$findGraphicsDevice() no longer tries to create a PNG
  device using png2(), because that has now moved to R.devices.
o Updated package dependencies.


Version: 1.15.1 [2012-06-16]
o Now package only imports/no longer depends on the 'utils' package.
  This means that all packages that depends on 'R.utils' for loading
  'utils' for them need to explicitly load it themselves.


Version: 1.15.0 [2012-05-22]
o Added systemR() for launching an external R process.
o Package no longer loads (via a DESCRIPTION Depends) the
  R.devices package, because that would cause a circular