@@ -44,8 +44,6 @@ print(toCamelCase(s))  # gEOAccession
 print(toCamelCase(s, preserveSameCase=TRUE))  # geoAccession
 print(toCamelCase(s, capitalize=TRUE))  # GEOAccession
 print(toCamelCase(s, capitalize=TRUE, preserveSameCase=TRUE))  # GEOAccession
-
-# Sanity checks
 stopifnot(toCamelCase(s) == toCamelCase(toCamelCase(s)))
 }
 
